unpackaged/main/default/objects/loan__Bank_Account__c/fields/Account_Number_Con_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Con_Info__c</fullName>
    <label>Account Number Con Info</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>