unpackaged/main/default/objects/loan__Bank_Account__c/fields/Bank_Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_External_Id__c</fullName>
    <description>Bank Account LAPro Id. Using for Data migration</description>
    <externalId>true</externalId>
    <label>Bank Account External Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>