unpackaged/main/default/objects/loan__Bank_Account__c/fields/Bank_Name_Derived__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Derived__c</fullName>
    <label>Bank Name (Derived)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>