unpackaged/main/default/objects/loan__Bank_Account__c/fields/BankACctMatch__c.field-meta.xml
<CustomField>
    <fullName>BankACctMatch__c</fullName>
    <formula>if(Account_Number__c = Unmasked_Bank_Account_Number__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankAcctMatch</label>
    <type>Checkbox</type>
</CustomField>