unpackaged/main/default/objects/loan__Bank_Account__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Bank Account Holder Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>