unpackaged/main/default/objects/loan__Bank_Account__c/fields/loan__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
                <default>true</default>
                <label>Checking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>