unpackaged/main/default/objects/loan__Bank_Account__c/fields/loan__Account_Usage__c.field-meta.xml
<CustomField>
    <fullName>loan__Account_Usage__c</fullName>
    <label>Account Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investor Trust Account</fullName>
            </value>
            <value>
                <fullName>Collections Trust Account</fullName>
            </value>
            <value>
                <fullName>Advance Trust Account</fullName>
            </value>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Tax Withholding Account</fullName>
            </value>
            <value>
                <fullName>Borrower/Investor Account</fullName>
            </value>
            <value>
                <fullName>Broker Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>