unpackaged/main/default/objects/loan__Bank_Account__c/fields/loan__ACH_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Code__c</fullName>
    <label>ACH Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>