unpackaged/main/default/objects/loan__Bank_Account__c/fields/loan__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>loan__Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>