unpackaged/main/default/objects/loan__Bank_Account__c/fields/loan__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>