unpackaged/main/default/objects/loan__Bank_Account__c/fields/loan__Signature_Line__c.field-meta.xml
<CustomField>
    <fullName>loan__Signature_Line__c</fullName>
    <label>Signature Line</label>
    <length>30</length>
    <type>Text</type>
</CustomField>