unpackaged/main/default/objects/loan__Bank_Account__c/fields/Name_Matches__c.field-meta.xml
<CustomField>
    <fullName>Name_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name Matches</label>
    <type>Checkbox</type>
</CustomField>