unpackaged/main/default/objects/loan__Bank_Account__c/fields/peer__Account_Age__c.field-meta.xml
<CustomField>
    <fullName>peer__Account_Age__c</fullName>
    <label>Account Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>