unpackaged/main/default/objects/loan__Bank_Account__c/fields/peer__Allow_for_Direct_Credit__c.field-meta.xml
<CustomField>
    <fullName>peer__Allow_for_Direct_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow for Direct Credit</label>
    <type>Checkbox</type>
</CustomField>