unpackaged/main/default/objects/loan__Bank_Account__c/fields/peer__Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>peer__Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>