unpackaged/main/default/objects/loan__Bank_Account__c/fields/peer__Savings_Pensions__c.field-meta.xml
<CustomField>
    <fullName>peer__Savings_Pensions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Savings Pensions</label>
    <type>Checkbox</type>
</CustomField>