unpackaged/main/default/objects/loan__Bank_Account__c/fields/peer__Working_Place_Type__c.field-meta.xml
<CustomField>
    <fullName>peer__Working_Place_Type__c</fullName>
    <label>Working Place Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State employed</fullName>
            </value>
            <value>
                <fullName>Government company</fullName>
            </value>
            <value>
                <fullName>Big company</fullName>
            </value>
            <value>
                <fullName>Small company</fullName>
            </value>
            <value>
                <fullName>Personal company</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>