unpackaged/main/default/objects/loan__Bank_Account__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>Voided Check</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>