unpackaged/main/default/objects/loan__Bank_Account__c/fields/Unmask__c.field-meta.xml
<CustomField>
    <fullName>Unmask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unmask</label>
    <type>Checkbox</type>
</CustomField>