unpackaged/main/default/objects/loan__Bank_Account__c/fields/Unmask_Con_Info__c.field-meta.xml
<CustomField>
    <fullName>Unmask_Con_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unmask Con Info</label>
    <type>Checkbox</type>
</CustomField>