unpackaged/main/default/objects/loan__Bank_Account__c/fields/Unmasked_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Unmasked_Bank_Account_Number__c</fullName>
    <label>Unmasked Bank Account Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>