unpackaged/main/default/objects/loan__Bank_Account__c/fields/Verified_by_linked_bank_account__c.field-meta.xml
<CustomField>
    <fullName>Verified_by_linked_bank_account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verified by linked bank account instead of bank statement</description>
    <inlineHelpText>Verified by linked bank account instead of bank statement</inlineHelpText>
    <label>Verified by linked bank account</label>
    <type>Checkbox</type>
</CustomField>