unpackaged/main/default/objects/loan__Bank_Account__c/fields/YodleeBank_Accounts__c.field-meta.xml
<CustomField>
    <fullName>YodleeBank_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked - if there are accounts in Yodlee</description>
    <label>YodleeBank Accounts</label>
    <type>Checkbox</type>
</CustomField>