unpackaged/main/default/objects/loan__Bank_Account__c/validationRules/Account_Number_and_Funding_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_and_Funding_Account</fullName>
    <active>false</active>
    <description>Account Number and Funding Account Should be same</description>
    <errorConditionFormula>AND( Account_Number__c != NULL, Account_Number__c 
 != loan__Bank_Account_Number__c)</errorConditionFormula>
    <errorDisplayField>Account_Number__c</errorDisplayField>
    <errorMessage>Account Number and Funding Account Should be same</errorMessage>
</ValidationRule>