unpackaged/main/default/objects/loan__Bank_Account__c/validationRules/Account_type_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_type_cannot_be_empty</fullName>
    <active>true</active>
    <description>Account type cannot be empty</description>
    <errorConditionFormula>ISPICKVAL(loan__Account_Type__c, "")</errorConditionFormula>
    <errorDisplayField>loan__Account_Type__c</errorDisplayField>
    <errorMessage>Account type cannot be empty</errorMessage>
</ValidationRule>