unpackaged/main/default/objects/loan__Bank_Account__c/validationRules/Account_usage_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_usage_cannot_be_empty</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(loan__Account_Usage__c)</errorConditionFormula>
    <errorDisplayField>loan__Account_Usage__c</errorDisplayField>
    <errorMessage>Please select value for Account Usage. If this is a borrower Bank Account please select the value Borrower/Investor Account.</errorMessage>
</ValidationRule>